[package]
authors = [ "VPR <0xvpr@god.io>" ]
name    = "rusty-dll"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
winapi = { version = "0.3.9", features = [ "libloaderapi", "processthreadsapi", "minwindef" ] }
libc = "*"
gfx = "0.18.3"

[profile.release]
lto = true
